Connecting the various Credentials to the provider
