# vida_verified/urls.py
@@ -1,5 +1,14 @@
-from django.urls import path
+from django.urls import include, path
+from rest_framework.routers import DefaultRouter
+
+from .views import DeaCredentialViewSet, NpiCredentialViewSet
 
 app_name = 'vida_verified'
 
-urlpatterns = []
+router = DefaultRouter()
+router.register('npi-credentials', NpiCredentialViewSet, basename='npi-credential')
+router.register('dea-credentials', DeaCredentialViewSet, basename='dea-credential')
+
+urlpatterns = [
+    path('', include(router.urls)),
+]
